[package]
name = "chance-oracle-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oracle"
path = "src/main.rs"

[[bin]]
name = "testenv"
path = "target_systems/testenv/main.rs"

[dependencies]
config = "0.13.3"
openssh = "0.9.9"
tokio = { version = "1", features = ["full"] }