[package]
name = "chance-oracle-benchmark"
version = "0.1.0"
edition = "2021"
default-run = "oracle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oracle"
path = "src/main.rs"

[[bin]]
name = "envtest_client"
path = "target_systems/envtest/client/main.rs"

[[bin]]
name = "envtest_server"
path = "target_systems/envtest/server/main.rs"

[dependencies]
config = "0.13.3"
openssh = "0.9.9"
indicatif = "0.17.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1.6", features = ["derive"] }
